# anonreq

./: .dockerignore  .env.example  .gitignore  AGENTS.md  AnonReq_Requirements_v1.0.docx  CHANGELOG.md  CLAUDE.md  CODE_REVIEW.md  Dockerfile  LICENSE  NOTICE  README.md  SECURITY.md  SECURITY_SCAN.md  STATE.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: docs-ci.yml  docs-nightly.yml  release.yml  test.yml
.planning/: ARCHITECTURE_GUARDRAILS.md  MASTER-ARCHITECTURE.md  MASTER-BACKLOG.md  MASTER-CI-CD.md  MASTER-DATA-FLOW.md  MASTER-DEPENDENCY-GRAPH.md  MASTER-DOCUMENTATION.md  MASTER-GTM-TECHNICAL-REQUIREMENTS.md  MASTER-OBSERVABILITY.md  MASTER-RISK-REGISTER.md  MASTER-SECURITY-MODEL.md  MASTER-TEST-STRATEGY.md  MASTER-VISION.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  v1.0-MILESTONE-AUDIT.md  v1.5-SPEC.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.5-MILESTONE-AUDIT.md  v1.5-REQUIREMENTS.md  v1.5-ROADMAP.md
.planning/onboarding/: SUMMARY.md
.planning/prompts/: anonreq-master-generation.md  phase-08-21-generation.md.md
.planning/reports/: MILESTONE_SUMMARY-v1.5.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
alembic/: env.py
alembic/versions/: 001_create_audit_event_table.py  002_create_governance_tables.py  003_create_tenant_table.py
config/: audit.yaml  capabilities.yaml  classification.yaml  dlp.yaml  enterprise-policy.yaml  export.yaml  fairness.yaml  financial_crime_words.yaml  mitre-mapping.yaml  mitre_atlas.yaml  mitre_attack.yaml  mnpi_recognizers.yaml  model_aliases.yaml  multimodal.yaml  policy.yaml  prompt-security-rules.example.yaml  prompt-security-rules.yaml  providers.yaml  recognizers.yaml  restricted_names.yaml  slo.yaml  soc-sinks.yaml  tenants.yaml  trust_center.yaml  webhook.yaml
config/compliance/: gdpr.yaml  lgpd.yaml  pdpa.yaml  pipeda.yaml  popia.yaml  privacy_act.yaml
config/locales/: ar.yaml  de-DE.yaml  en.yaml  es.yaml  fr-FR.yaml  it-IT.yaml  nl-NL.yaml  pt-BR.yaml
config/policies/: default.yaml
docker/prometheus/: prometheus.yml
docs/: GLOSSARY.md  TRANSLATION_MANIFEST.md  architecture.mmd
docs/ar/: README.md  api-reference.md  architecture.md  compliance.md  deployment.md  faq.md  getting-started.md  installation.md  operations.md  security.md
docs/architecture/: multimodal.md
docs/compliance/: financial-services-mapping.md
docs/de/: api-reference.md  compliance.md  deployment.md  faq.md  getting-started.md  installation.md
docs/en/: api-reference.md  architecture.md  compliance.md  deployment.md  faq.md  getting-started.md  installation.md  operations.md  security.md
docs/es/: api-reference.md  architecture.md  compliance.md  deployment.md  faq.md  getting-started.md  installation.md  operations.md  security.md
docs/fr/: api-reference.md  architecture.md  compliance.md  deployment.md  faq.md  getting-started.md  installation.md  operations.md  security.md
docs/it/: api-reference.md  architecture.md  compliance.md  deployment.md  faq.md  getting-started.md  installation.md  operations.md  security.md
docs/nl/: api-reference.md  architecture.md  compliance.md  deployment.md  faq.md  getting-started.md  installation.md  operations.md  security.md
docs/operations/: policy-runbook.md  slo-runbook.md
docs/pt/: api-reference.md  architecture.md  compliance.md  deployment.md  faq.md  getting-started.md  installation.md  operations.md  security.md
docs/security/: incident-response.md
examples/curl/: basic-anonymization.sh  gdpr-preset.sh  locale-de.sh  streaming.sh
examples/datasets/: expected-results.json  sample-pii.json
examples/quickstart/: 01-start-gateway.sh  02-basic-anonymization.sh  03-cleanup.sh
openapi/: openapi.yaml
phases/08-Enterprise-Policy-Engine/: 08-CONTEXT.md  08-DISCUSSION-LOG.md  08-SECURITY-ACCEPTANCE.md  08-TEST-PLAN.md
phases/09-RBAC-SSO/: 09-CONTEXT.md
phases/09-multimodal-document-anonymization/: 09-DISCUSSION-LOG.md  09-TASK-BREAKDOWN.md
phases/10-Tenant-Isolation/: 10-SECURITY-ACCEPTANCE.md
phases/11-Audit-Compliance-Center/: 11-TASK-BREAKDOWN.md
phases/11-operational-observability-compliance/: 11-CONTEXT.md  11-DISCUSSION-LOG.md  11-TASK-BREAKDOWN.md
phases/12-data-classification-handling/: 12-02-SUMMARY.md  12-03-SUMMARY.md  12-ARCHITECTURE.md  12-CONTEXT.md  12-DISCUSSION-LOG.md  12-SECURITY-ACCEPTANCE.md
phases/13-ai-firewall-data-loss-prevention/: 13-ARCHITECTURE.md
phases/14-ai-governance-oversight/: 14-DISCUSSION-LOG.md
phases/15-financial-services-compliance/: 15-CONTEXT.md  15-DISCUSSION-LOG.md  (+1 more)
req/: GTM-CURRENT.md  GTM.md  HLD.md  LLD.md  PRD.md  ROADMAP.md  abbreviations.md  requirements.md  requirements_v2.md  roadmap1.md  roadmap2.md  roadmap3.md  roadmap4.md  tst.md
scripts/: check-translation-drift.py  export_openapi.py  package-vm.sh  sbom.sh  translate-docs.py
systemd/: anonreq-agent.service
tests/: __init__.py  conftest.py  hypothesis_strategies.py  test_admin_audit_api.py  test_agent_approval.py  test_agent_mcp.py  test_agent_pbt.py  test_agent_policy.py  test_agent_result_sanitizer.py  test_agent_tool_inspector.py  test_allowlist.py  test_aml_webhook.py  test_appliance.py  test_approval.py  test_audit_chain.py  test_audit_exporter.py  test_auth.py  test_breach.py  test_breach_detector.py  test_breach_notifications.py  test_ca_manager.py  test_cache.py  test_chain_anchor.py  test_classification.py  test_classification_audit.py  test_classification_engine.py  test_classification_middleware.py  test_classification_pipeline.py  test_classification_property.py  test_classification_response.py  test_compliance_property.py  test_config.py  test_context_boosting.py  test_data_lineage.py  test_dedup_merge.py  test_detection.py  test_dispatcher_backward_compat.py  test_dlp_audit.py  test_dlp_engine.py  test_dlp_mitre.py  (+100 more)
(+1046 files in other folders)
