[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "anonreq"
version = "0.1.0"
description = "Self-hosted anonymization gateway for external LLM APIs"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
authors = [
    { name = "AnonReq Contributors" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

dependencies = [
    "fastapi>=0.138.0",
    "uvicorn[standard]>=0.49.0",
    "pydantic-settings>=2.14.2",
    "structlog>=26.1.0",
    "python-json-logger>=4.1.0",
    "redis>=8.0.0",
    "pyyaml>=6.0.3",
    "httpx>=0.28.1",
    "jinja2>=3.1.0",
    "prometheus-client>=0.25.0",
    "cryptography>=42.0.0",
    "watchdog>=4.0.0",
    "minio>=7.2.0",
    "pyarrow>=15.0.0",
    "reportlab>=4.3.0,<5.0.0",
    "onnxruntime>=1.17.0",
    "soundfile>=0.12.1",
    "presidio-analyzer>=2.2.35",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.31.0",
    "aiosqlite>=0.20.0",
    "h11>=0.16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.4.0",
    "hypothesis>=6.155.0",
    "respx>=0.21.0",
    "fakeredis>=2.0",
    "ruff>=0.9.0",
    "mypy>=1.15.0",
]
voice = [
    "openai-whisper>=20231117",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["anonreq*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "load: load and concurrency tests",
]

[tool.coverage.run]
source = ["anonreq"]

[tool.coverage.report]
fail_under = 60
show_missing = true
skip_covered = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "ARG", "PT", "RUF"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
show_error_codes = true
disable_error_code = ["type-arg"]
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

[[tool.mypy.overrides]]
module = ["fastapi.*", "pydantic.*", "sqlalchemy.*", "cryptography.*", "httpx.*", "structlog.*", "prometheus_client.*", "yaml.*", "jinja2.*", "reportlab.*", "minio.*", "pyarrow.*", "watchdog.*", "onnxruntime.*", "soundfile.*", "presidio_analyzer.*", "python_multipart.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["anonreq.governance.*"]
disable_error_code = ["assignment", "arg-type", "misc", "no-any-return", "attr-defined", "return-value", "str-bytes-safe", "no-untyped-def", "no-untyped-call"]

[[tool.mypy.overrides]]
module = ["anonreq.retention.*"]
disable_error_code = ["assignment", "arg-type", "misc", "no-any-return", "attr-defined", "no-untyped-def"]

[[tool.mypy.overrides]]
module = ["anonreq.dsar.*"]
disable_error_code = ["assignment", "arg-type", "misc", "no-any-return", "attr-defined", "no-untyped-def"]

[[tool.mypy.overrides]]
module = ["anonreq.breach.*"]
disable_error_code = ["assignment", "arg-type", "misc", "no-any-return", "attr-defined", "no-untyped-def"]

[[tool.mypy.overrides]]
module = ["anonreq.cache.*", "anonreq.proxy.*", "anonreq.endpoint.*", "anonreq.discovery.*", "anonreq.soc.*", "anonreq.storage.*", "anonreq.rag.*", "anonreq.fairness.*", "anonreq.voice.*", "anonreq.pipeline.*", "anonreq.services.*", "anonreq.policy.*", "anonreq.admin.*", "anonreq.routing.*", "anonreq.routes.*", "anonreq.main"]
disable_error_code = ["arg-type", "assignment", "attr-defined", "misc", "no-any-return", "no-untyped-def", "no-untyped-call", "union-attr", "var-annotated", "return-value", "override", "import-not-found", "import-untyped", "func-returns-value"]

[[tool.mypy.overrides]]
module = ["anonreq.providers.*"]
disable_error_code = ["override"]

[[tool.mypy.overrides]]
module = ["anonreq.api.*", "anonreq.appliance.*", "anonreq.casb.*", "anonreq.config.*", "anonreq.detection.*", "anonreq.firewall.*", "anonreq.health", "anonreq.lineage.*", "anonreq.locale.*", "anonreq.logging_config", "anonreq.mcp.*", "anonreq.middleware.*", "anonreq.restore.*"]
disable_error_code = ["attr-defined", "no-any-return", "no-untyped-def", "no-untyped-call", "union-attr", "var-annotated", "return-value", "override", "import-not-found", "import-untyped", "arg-type", "assignment", "misc", "no-redef", "list-item", "func-returns-value", "comparison-overlap"]
